<resources>
    <string name="app_name">Mood Tracker</string>

    <string name="tvWelcomeText">Welcome Back</string>
    <string name="tvStreakText">Streak</string>
    <string name="tvStreakValue">0</string>
    <string name="tvAvgMoodText">Avg Mood</string>
    <string name="tvAvgMoodValue">neutral</string>
    <string name="tvPromptText">How are you feeling?</string>
    <string name="tvTitleText">How are you?</string>
    <string name="tvDateText">Today, March 22</string>
    <string name="tvTimeValue">14:30</string>
    <string name="tvMoodAwfulText">Awful</string>
    <string name="tvMoodBadText">Bad</string>
    <string name="tvMoodNeutralText">Neutral</string>
    <string name="tvMoodGoodText">Good</string>
    <string name="tvMoodGreatText">Great</string>
    <string name="tvHeaderSelected">Selected mood</string>
    <string name="tvDataManagement">Data Management</string>
    <string name="tvComingSoon">Coming Soon!</string>
    <string name="tvUnderDevelopment">Social features are under development</string>
    <string name="tvMoodDistributionText">Mood Distribution</string>
    <string name="tvMoodOverTimeText">Mood Over Time</string>
    <string name="tvMoodInsightsText">Mood Insights</string>
    <string name="tvFrequentMoodLabelText">Most Frequent Mood</string>
    <string name="tvFrequentMoodValue">Good</string>
    <string name="tvAverageMoodLabelText">Average Mood</string>
    <string name="tvAverageMoodValue">3.7/5</string>
    <string name="tvCurrentStreakLabelText">Current Streak</string>
    <string name="tvCurrentStreakValue">5 days</string>
    <string name="tvBestStreakLabelText">Best Streak</string>
    <string name="tvBestStreakValue">12 days</string>
    <string name="tvTotalEntriesLabelText">Total Entries</string>
    <string name="tvTotalEntriesValue">28</string>
    <string name="tvStatsHeaderText">Your Mood Stats</string>
    <string name="tvChartHintText">Tap on points to see details</string>
    <string name="ivChartIcDesc">Chart information</string>
    <string name="tvWelcomeHeaderText">Welcome Back!</string>
    <string name="tvCalendarSubtitleText">Select a day to log your mood</string>
    <string name="tvStreakHeaderText">Current Streak</string>
    <string name="ivStreakIconDesc">Streak flame</string>
    <string name="tvStreakCountValue">7 days</string>
    <string name="tvMotivationText">Keep going!</string>
    <string name="tvBestStreakText">Best streak</string>
    <string name="tvBestStreakCountValue">21 days</string>
    <string name="tvMoodStatsHeaderText">Mood Stats</string>
    <string name="tvLogginTimeHeaderText">When you usually log mood</string>
    <string name="tvMorningPercent">25%</string>
    <string name="tvMorningText">Morning</string>
    <string name="tvAfternoonPercent">45%</string>
    <string name="tvAfternoonText">Afternoon</string>
    <string name="tvEveningPercent">30%</string>
    <string name="tvEveningText">Evening</string>
    <string name="tvRecentTrendHeaderText">Recent mood trend</string>
    <string name="tvRecentTrendMessage">Your mood has been improving over the last 3 days</string>
    <string name="tvSettingsHeaderText">Settings</string>
    <string name="tvDataManagementHeaderText">Data Management</string>
    <string name="tvManageDataText">Manage your mood tracking data</string>
    <string name="tvAboutHeaderText">About</string>
    <string name="tvMoodTracker">Mood Tracker</string>
    <string name="tvVersionValue">Version 1.0.0</string>
    <string name="tvDevelopedByText">Developed by</string>
    <string name="tvMe">whoisridze</string>
    <string name="tvLibraries">Libraries</string>
    <string name="tvLibrariesContent">• MPAndroidChart\n• Kizitonwose Calendar</string>
    <string name="tvIcons">Icons</string>
    <string name="tvIconsContent">Material Design Icons</string>
    <string name="tvCopyrightText">© 2025 Mood Tracker. All rights reserved.</string>

    <string name="ivCalendarDesc">calendarIcon</string>
    <string name="ivClockDesc">clockIcon</string>
    <string name="ivSelectedMoodDesc">moodIcon</string>
    <string name="ivCatImageDesc">Cute cat image</string>
    <string name="ivSelectedTimeDesc">Select time</string>

    <string name="awfulMoodButton">awfulMoodButton</string>
    <string name="badMoodButton">badMoodButton</string>
    <string name="neutralMoodButton">neutralMoodButton</string>
    <string name="goodMoodButton">goodMoodButton</string>
    <string name="greatMoodButton">greatMoodButton</string>
    <string name="viewMoodDataButton">View Mood Data</string>
    <string name="periodWeekButton">Week</string>
    <string name="periodMonthButton">Month</string>
    <string name="periodYearButton">Year</string>
    <string name="periodAllTimeButton">All Time</string>
    <string name="deleteMoodDataButton">Delete All Mood Data</string>
    <string name="viewDataBtn">View Data</string>
    <string name="deleteDataBtn">Delete All Data</string>
    <string name="closeButtonDesc">closeButtonDesc</string>
    <string name="sendButtonDesc">sendButtonDesc</string>

    <string name="etReasonHint">Add a reason (optional)</string>
    <string name="tvSelectedMoodText">MoodName</string>

    <string name="noDataFound">No mood data found</string>
    <string name="dataDeleted">All mood data has been deleted</string>
    <string name="confirmDelete">Are you sure you want to delete all mood data?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="moodData">Mood Data</string>
    <string name="close">Close</string>
    <string name="noData">No data</string>


    <plurals name="daysCount">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <string name="monthYearFormat">%1$s %2$d</string>
    <string name="percentageFormat">%d%%</string>
</resources>