<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="82dp"
    android:clipToPadding="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient"
        android:padding="24dp">

        <TextView
            android:id="@+id/tvDataManagementHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/tvDataManagement"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnViewJson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/viewMoodDataButton"
            android:textColor="@android:color/white"
            app:icon="@drawable/ic_file"
            app:iconGravity="start"
            app:iconTint="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/tvDataManagementHeader" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDeleteJson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/deleteMoodDataButton"
            android:textColor="@android:color/white"
            app:backgroundTint="#FF5252"
            app:icon="@drawable/ic_delete"
            app:iconGravity="start"
            app:iconTint="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/btnViewJson" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>